--- a/dotfiles/.conkyrc
+++ b/dotfiles/.conkyrc
@@ -1,3 +1,4 @@
+
 # UBUNTU-CONKY
 # A comprehensive conky script, configured for use on
 # Ubuntu / Debian Gnome, without the need for any external scripts.
@@ -26,7 +27,7 @@ use_xft no
 update_interval 3.0
 
 #Maximum Width of Window
-maximum_width 220
+#maximum_width 220
 
 # Minimum size of text area
 # minimum_size 250 5
@@ -57,9 +58,7 @@ own_window_transparent yes
 
 # Text alignment, other possible values are commented
 #alignment top_left
-alignment top_right
-#alignment bottom_left
-#alignment bottom_right
+alignment bottom_middle
 
 # Gap between borders of screen and text
 gap_x 10
@@ -78,7 +77,7 @@ TEXT
 
 Total CPU: ${cpu cpu0}%
 ${color 597DB2}${cpubar}$color
-${cpugraph 000000 597DB2}
+${cpugraph 000000 597DB2} \
 Temprature: $color ${exec sensors|grep 'temp1'|awk '{print $2}'}
 Core 1: ${freq 1} MHz
 ${cpu cpu1}% ${color 597DB2}${cpubar cpu1}$color
@@ -87,7 +86,7 @@ ${cpu cpu2}% ${color 597DB2}${cpubar cpu2}$color
 Core 3: ${freq 3} MHz
 ${cpu cpu3}% ${color 597DB2}${cpubar cpu3}$color
 Core 4: ${freq 4} MHz
-${cpu cpu4}% ${color 597DB2}${cpubar cpu4}$color
+${cpu cpu4}% ${color 597DB2}${cpubar cpu4}$color \
 
 NAME            PID	 CPU%  	MEM%
 ${color 0000FF}${top name 1} ${top pid 1} ${top cpu 1} ${top mem 1}
@@ -99,7 +98,6 @@ $color
 ${color CC9900}MEMORY ${hr 2}$color
 RAM Used: ${mem}	RAM Free: ${memfree}/ ${memmax}
  RAM: $memperc%  ${color FF6600} ${membar 6}$color
-Swap: $swapperc%   ${color FF6600} ${swapbar 6}$color
 
 #${color CC9900}DISK ${hr 2}$color
 #sdc5 ${fs_type} (Root): ${fs_free_perc /}% ${color FFFF33} ${fs_bar 6 /}$color
