--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,6 @@
 {
   "javascript.validate.enable": false,
-  "eslint.autoFixOnSave": false
+  "typescript.suggest.autoImports": true,
+  "javascript.suggest.autoImports": true,
+  "html.autoClosingTags": true
 }
