--- a/coc-settings.json
+++ b/coc-settings.json
@@ -3,9 +3,9 @@
   "typescript.suggest.autoImports": true,
   "typescript.format.enabled": true,
   "javascript.suggest.autoImports": true,
+  "suggest.noselect": true,
   "coc.preferences.formatOnSaveFiletypes": ["*"],
-  "prettier.disableSuccessMessage": true,
-  "prettier.eslintIntegration": false,
+  "eslint.autoFixOnSave": true,
   "coc.preferences.formatOnType": true,
   "coc.preferences.formatOnTypeFiletypes": ["*"],
   "styled-components.tags": ["styled", "css", "sty", "createGlobalStyle"],
@@ -13,7 +13,8 @@
   "explorer.openAction.strategy": "previousBuffer",
   "explorer.contentWidthType": "win-width",
   "explorer.file.child.template": "[indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1]",
-  "explorer.toggle": false,
+  "explorer.toggle": true,
   "typescript.preferences.includePackageJsonAutoImports": "on",
-  "colors.filetypes": ["*"]
+  "colors.filetypes": ["*"],
+  "git.enableGutters": true
 }
